--- a/JobPortal.WebApp/Views/Shared/_Layout.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_Layout.cshtml
@@ -211,12 +211,12 @@
 	<script src="~/assets/user/js/jquery.nice-select.min.js"></script>
 	<script src="~/assets/user/js/parallax.min.js"></script>
 	<script src="~/assets/user/js/mail-script.js"></script>
-	<script src="~/assets/user/js/main.js"></script>
-	@*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+	@*<script src="~/assets/user/js/main.js"></script>*@
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<!-- Client -->
-	@*<script src="~/assets/js/main.js"></script>*@
+	<script src="~/assets/js/main.js"></script>
 	<script src="~/assets/js/mixitup.min.js"></script>
 	<!-- Popup -->
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
