--- a/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
+++ b/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
@@ -15,7 +15,7 @@
                 <h1 class="text-white">
                     <span>Want to be an employer ?</span>
                 </h1>
-                <p class="text-white"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="#"> Register now !</a></p>
+                <p class="text-white"><a href="/">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="#"> Sign up now !</a></p>
             </div>
         </div>
     </div>
@@ -184,7 +184,6 @@
             });
         }
     </script>
-
 
     <script>
         $(document).ready(function () {
