--- a/JobPortal.WebApp/Views/Employer/Register.cshtml
+++ b/JobPortal.WebApp/Views/Employer/Register.cshtml
@@ -164,7 +164,7 @@
                     $("#form").submit();
                     Swal.fire(
                         'Success!',
-                        '',
+                        'Your account has been successfully created and your account name has been successfully changed. Please wait for confirmation to become an employer.',
                         'success'
                     )
                 }
