--- a/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
+++ b/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
@@ -173,7 +173,7 @@
                 if (result.isConfirmed) {
                     Swal.fire(
                         'Success!',
-                        'Your account has been successfully created and your account name has been successfully changed. Please wait for confirmation to become an employer.',
+                        'Your account has been successfully created. Please wait for confirmation to become an employer.',
                         'success'
                     ).then((confirmResult) => {
                         if (confirmResult.isConfirmed) {
